--- a/src/Web/Views/Turmas/Details.cshtml
+++ b/src/Web/Views/Turmas/Details.cshtml
@@ -13,7 +13,7 @@
     <input type="hidden" name="id" value="@ViewBag.Id" />
     <div class="form-group">
         <label for="exampleFormControlInput1">Curso</label>
-        <input type="text" class="form-control" name="curso_id" id="cursoId" value="@Model?.cursoId">
+        <input type="number" class="form-control" name="cursoId" id="cursoId" value="@Model?.cursoId">
     </div>
     <div class="form-group">
         <label for="exampleFormControlInput1">Turma</label>
